src/styles/main.scss
@use 'hero';
@use './components/infos_bar';
@use './components/buttons';
@use 'story';
@use 'variables';
@use 'modal';

*  {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  color: variables.$textColor;
  list-style: none;
}

.container {
  max-width: 960px;
  width: 100%;
  margin: 0 auto;

  @media (max-width: 640px) {
    width: 80%;
  }

  @media (max-width: 1024px) {
    width: 90%;
  }
}

